--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-        <a href="/syllabus.html" class="btn">Syllabus</a>
-        <a href="{{ site.github.repository_url }}" class="btn">Resources</a>
-        <a href="{{ site.github.repository_url }}" class="btn">Projects</a>
+      <a href="/index.html" class="btn">Home</a>
+        <a href="https://github.com/dsl2l2017" class="btn">Github</a>
+        <a href="/assignments.html" class="btn">Assignments</a>
     </section>
 
     <section class="main-content">
