Add link to learn2launch website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       <a href="/index.html" class="btn">Home</a>
+      <a href="http://learn2launch.berkeley.edu" class="btn">Learn2Launch</a>
         <a href="https://github.com/dsl2l2017" class="btn">Github</a>
         <a href="/assignments.html" class="btn">Assignments</a>
     </section>
